# gorilla-math

./: CMakeLists.txt  libgorilla-math.pc.in
include/: math.hpp  matrix33.hpp  vector2.hpp  vector3.hpp
src/: math.cpp  math.hpp  matrix33.cpp  matrix44.cpp  matrix44.hpp  quaternion.cpp  quaternion.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp  vector4.cpp  vector4.hpp
tests/: unit-test.cpp  unit-tests.cpp
